--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -34,6 +34,8 @@
         }
     },
     "action": {
+        "signin": "Войти",
+        "signup": "Зарегистрироваться",
         "close": "Закрыть",
         "copy": "Скопировать",
         "bind": "Привязать",
@@ -73,5 +75,6 @@
     "how-working-referral-link": "Как работает реферальная ссылка",
     "copied": "Скопировано",
     "social": "Источник данных",
-    "phone": "Телефон"
+    "phone": "Телефон",
+    "welcome-text": "Добро пожаловать в TravelAi - сервис, где вы можете продавать свои социальные данные"
 }
